--- a/css/style-opdr2.css
+++ b/css/style-opdr2.css
@@ -1,3 +1,43 @@
 html, body{
     height: 100%;
 }
+
+body{
+    display: flex;
+}
+
+div{
+
+}
+
+aside{
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    height: 100%;
+    background-color: green;
+}
+
+ main{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     width: 90%;
+     height: 100%;
+     background-color: orange;
+ }
+
+.menu-button{
+    width: 100px;
+    height: 70px;
+    background-color: white;
+    margin: 30px;
+}
+
+.foto{
+    width: 150px;
+    height: 150px;
+    margin: 40px;
+
+}
+
