--- a/css/style-opdr3.css
+++ b/css/style-opdr3.css
@@ -1,3 +1,12 @@
 html, body{
     height: 100%;
 }
+
+header, footer{
+    height: 20%;
+    background-color: aqua;
+}
+
+main{
+    height: 30%;
+}
